refactor(JsonService, PostService): improve code formatting and streamline POST request handling