@@ -1,7 +1,6 @@
 package br.com.julioneto.service;
 
 import br.com.julioneto.models.ExternalCrawlerResponse;
-import br.com.julioneto.models.Link;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -9,19 +8,22 @@ import org.json.JSONObject;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class PostService {
     private static final String BASE_URL = "http://localhost:8080";
 
-    public static ExternalCrawlerResponse sendCrawlRequest(String targetUrl) throws Exception {
-        URL url = new URL(BASE_URL + "/");
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+    private PostService() {
 
+    }
+
+    public static ExternalCrawlerResponse sendCrawlRequest(String targetUrl) throws Exception {
+        URL url = URI.create(BASE_URL.concat("/")).toURL();
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("POST");
         connection.setRequestProperty("Content-Type", "application/json; utf-8");
         connection.setRequestProperty("Accept", "application/json");
@@ -29,7 +31,7 @@ public class PostService {
         connection.setDoOutput(true);
 
         List<String> allowedDomainsList = new ArrayList<>(
-                Arrays.asList("ufape.edu.br")
+                List.of("ufape.edu.br")
         );
 
         JSONObject body = new JSONObject();
@@ -41,10 +43,10 @@ public class PostService {
 
         body.put("url", targetUrl);
         body.put("timeout", 90); // tempo em segundos
-        body.put("remove_fragment",true);
+        body.put("remove_fragment", true);
         body.put("allowed_domains", allowedDomains);
-        body.put("collect_subdomains",true);
-        body.put("lower_case_urls",false);
+        body.put("collect_subdomains", true);
+        body.put("lower_case_urls", false);
 
         try (OutputStream os = connection.getOutputStream()) {
             os.write(body.toString().getBytes(StandardCharsets.UTF_8));
